When a selected node in nested ShadowDOM is deleted, selection have wrong range. https://bugs.webkit.org/show_bug.cgi?id=106526

Reviewed by Ryosuke Niwa.

Source/WebCore:

Since FrameSelection and htmlediting did not consider nested Shadow DOM, the FrameSelection still selects
removed elements if selected nodes in nested Shadow DOM are removed.

We have to use containsIncludingShadowDOM to handle with nested Shadow DOM correctly.

Test: fast/dom/shadow/selection-in-nested-shadow.html

* editing/FrameSelection.cpp:
(WebCore::removingNodeRemovesPosition):
* editing/htmlediting.cpp:
(WebCore::updatePositionForNodeRemoval):

LayoutTests:

* fast/dom/shadow/selection-in-nested-shadow-expected.txt: Added.
* fast/dom/shadow/selection-in-nested-shadow.html: Added.


Canonical link: https://commits.webkit.org/124825@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@139401 268f45cc-cd09-0410-ab3c-d52691b4dbfc